@@ -429,8 +429,9 @@ class ArgHandler:
 
         elif Config.get(Config.RECENT_FILE) and Config.get(Config.AUTOLOAD):
             rf = Config.get(Config.RECENT_FILE)
-            filetype = Mime.get_type(rf)
-            self.vm.read_recent_file(rf,filetype)
+            if os.path.isfile(rf):
+                filetype = Mime.get_type(rf)
+                self.vm.read_recent_file(rf,filetype)
 
     #-------------------------------------------------------------------------
     #
